# cmake-samples

./: .gitignore
cmake-check-md-mt-flags/: CMakeLists.txt  build-debug.txt  info.sh  main.cpp  module.cpp  module.h
cmake-install-simple/: info.sh  track.sh
cmake-install-simple/exe-uses-module-1/: CMakeLists.txt
cmake-install-simple/exe-uses-module-1/src/: main-exe-1.cpp
cmake-install-simple/module-1-install/: CMakeLists.txt  module-1-config.cmake
cmake-install-simple/module-1-install/include/: module-1.h  other.h
cmake-install-simple/module-1-install/src/: module-1.cpp
cmake-install-simple/module-2-install/: CMakeLists.txt  module-2-config.cmake
cmake-install-simple/module-2-install/include/: module-2.h
cmake-install-simple/module-2-install/src/: code.cpp
use-gtest/: CMakeLists.txt  info.sh  test.cpp
use-zeromq/: CMakeLists.txt  info.sh  test.cc  test_util.h
